# CMPT373_json_compiler

./: CMakeLists.txt  LICENSE  README - for web socketing not project.md  webchat.html
games/: display_test.json  rock_paper_scissors.json  test.json
json_tests/: JSONDeserialized.h  jsonclass.cpp  jsonclass.h  main.cpp  test_read.json
json_tests/notes/: notes.txt  to-do.txt
lib/networking/: CMakeLists.txt
lib/networking/include/: Client.h  Server.h
lib/networking/src/: Client.cpp  Server.cpp
src/: JSON_parser.cpp  RuleHelpers.cpp  game.cpp  main.cpp  message.cpp  rules.cpp
src/include/: JSONDeserialized.h  RSJparser.tcc  RuleHelpers.h  TestJSONDeserialized.h  main.h  message.h  rules.h
test/: CMakeLists.txt  rulesTests.cc
testGui/: CMakeLists.txt  readme.txt
testGui/src/: CMakeLists.txt  gui.cpp  gui.h  main.cpp
tools/: CMakeLists.txt
tools/chatclient/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  chatclient.cpp
tools/chatserver/: CMakeLists.txt  chatserver.cpp
tools/flutterclient/: CMakeLists.txt  pubspec.yaml
tools/flutterclient/lib/: main.dart
tools/flutterclient/test_driver/: main.dart  main_test.dart
